# extract-audio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README-Wayback-Scraper.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: audio_scraper.md  getting_started.md  spotify_audio_extractor.md  spotify_downloader.md  wayback_audio_scraper.md
scripts/: convert_ogg_to_mp3.sh
src/cratedigger/: __init__.py  convert.py  scrape.py  spotify.py
src/extractor/: __init__.py  convert.py  main.py  scrape.py  scrape_audio.py  spotify.py
src/scraper/: README.md  google-apps-script.js
tests/integration/: __init__.py  conftest.py  default_spark_test.py
tests/unit/: default_test.py
